# rust-magic

./: Cargo.toml  help.html  search-index.js  settings.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/traits/collect/: trait.Extend.js  trait.FromIterator.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/arith/: trait.Sub.js  trait.SubAssign.js
implementors/core/ops/bit/: trait.BitAnd.js  trait.BitAndAssign.js  trait.BitOr.js  trait.BitOrAssign.js  trait.BitXor.js  trait.BitXorAssign.js  trait.Not.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
magic/: all.html  enum.MagicError.html  fn.libmagic_version.html  index.html  struct.Cookie.html  struct.CookieFlags.html  struct.FfiError.html
src/: lib.rs
src/magic/: ffi.rs.html  lib.rs.html
