[package]
name = "magic"
description = "High level bindings for the `libmagic` C library"
license = "MIT"
keywords = ["magic", "file", "ffi", "bindings"]
categories = ["api-bindings", "filesystem", "parsing"]
repository = "https://github.com/robo9k/rust-magic.git"
authors = [
  "Daniel Micay <danielmicay@gmail.com>",
  "Petar Radošević <petar@wunki.org>",
  "lilydjwg <lilydjwg@gmail.com>",
  "Jeff Belgum <belgum@bastille.io>",
  "Onur Aslan <onur@onur.im>",
  "robo9k <robo9k@symlink.io>",
]
version = "0.13.0-alpha.4"
exclude = [
  ".gitignore",
  "/.github/",
  "rust-toolchain.toml",
  "deny.toml",
  "data/tests/",
  ".bumpversion.cfg",
  "clippy.toml",
]
rust-version = "1.48"
edition = "2018"
[package.metadata]
msrv = "1.70.0"

[package.metadata.docs.rs]
all-features = true
targets = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "1.3.2"
magic-sys = { version = "0.3.0-alpha.3", path = "../rust-magic-sys" }
thiserror.workspace = true
errno = "0.2.8"

[dependencies.libc]
version = "0.2.105"
default-features = false

[dev-dependencies]
regex = "1.5.4"
static_assertions = "1.1.0"


[package.metadata.deb]
name = "resiliate-magic"
license-file = ["LICENSE", "1"]
copyright = "Copyright (C) 2017 – 2023 saf.ai, Inc."
revision = "20230701"
extended-description-file = "README.md"
priority = "required"
section = "filesystems"
depends = "$auto"
